--- a/package.json
+++ b/package.json
@@ -1,14 +1,20 @@
 {
+  
+  "homepage": "https://github.com/jdelichotti/smartbetdapp.git",
+
   "name": "smartbetdapp",
   "private": true,
   "scripts": {
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "dependencies": {
     "ethers": "^5.5.1",
+    "gh-pages": "^3.2.3",
     "next": "12.0.4",
     "react": "17.0.2",
     "react-dom": "17.0.2",
